<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/dp_5"
    android:divider="@drawable/divider"
    android:showDividers="middle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_20"
        android:text="@string/goods_name"/>
    <TextView
        android:id="@+id/tv_details_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_20"
        android:text="@string/goods_price"/>
    <TextView
        android:id="@+id/tv_details_master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_20"
        android:text="@string/goods_master"/>
    <TextView
        android:id="@+id/tv_details_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_20"
        android:text="@string/goods_description"/>
</LinearLayout>