<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.timestudio.usedshop.presentation.main.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/sp_20"
            android:text="@string/shop"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" />
    </android.support.v7.widget.Toolbar>
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/ll_main"
        >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/ll_main"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/tv_shop"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:drawableTop="@drawable/sel_shopping"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/shop"
        />
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:drawableTop="@drawable/sel_chat"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/message"
            />
        <TextView
            android:id="@+id/tv_list"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:drawableTop="@drawable/sel_people"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/people"
            />
        <TextView
            android:id="@+id/tv_mine"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:drawableTop="@drawable/sel_perm_identity"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/mine"
            />
    </LinearLayout>


</RelativeLayout>
